post file overflow issue fix

--- a/client/src/css/post.module.scss
+++ b/client/src/css/post.module.scss
@@ -33,6 +33,11 @@
             margin-right: 10px;
             font-weight: bold;
           }
+          > p {
+            a {
+              overflow-x: scroll;
+            }
+          }
         }
       }
 
